fix: fix history create to read model source from request body
