# docs/swagger.json
@@ -78,7 +78,7 @@
                 "parameters": [
                     {
                         "description": "Request Body",
-                        "name": "CreateGeminiHistory",
+                        "name": "CreateHistory",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -143,7 +143,7 @@
                 "parameters": [
                     {
                         "description": "Request Body",
-                        "name": "CreateManyGeminiHistory",
+                        "name": "CreateManyHistory",
                         "in": "body",
                         "required": true,
                         "schema": {
